--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 	<style type="text/css">
 		body{
 			background-color: #f5f5f4;
-			color: #ccc;
+			color: #262625;
 			font-family: 'Raleway', sans-serif;
-
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+			align-content: center;
 		}
 	</style>
 </head>
