added the viewport and description metatag to the page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-	<title>Hello World!!!</title>
+	<title>Hello World!!!-----It's Oseni Adekunle</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Oseni Adekunle Personal Portfolio website">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
 	<style type="text/css">
 		body{
