added url to social links

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 				</p>
 		</div>
 		<div class="social__section">
-		<a href=""><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
-		<a href=""><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-		<a href=""><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-		<a href=""><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+		<a href="https://web.facebook.com/oseniadekunle09/"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+		<a href="https://www.github.com/adexot/"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+		<a href="https://www.instagram.com/adexot"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+		<a href="https://www.linkedin.com/in/adekunle-oseni-aa83a4118"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
 		</div>
 	</div>
 	
