--- a/index.html
+++ b/index.html
@@ -1,48 +1,34 @@
-<!Doctype html> 
+<!Doctype html>
 <html lang="en">
-<head>
-   <title>Oseni Adekunle</title> 
-   <meta name="author" content="Oseni Adekunle">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="personal portfolio website for Oseni Adekunle">
-   <link rel="stylesheet" href="style.css">
-   <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-</head>
-<body>
-    <div class="box home__box">
-        <a href="#" id="modalBtn" class="message"><i class="fa fa-envelope-o"></i></a>
-        <img src="adexot.jpg" alt="adexot.jpg" title="iAmAdexot">
-        <div>
-            <h1>Oseni Adekunle</h1>
-            <ul>
-                <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.instagram.com/adexot"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/adekunle-oseni-aa83a4118"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="https://www.github.com/adexot"><i class="fa fa-github"></i></a></li>
-            </ul>
-            <hr>
-            <h2>
-            <span class="small-text">
-                Web Developer
-            </span>
-            <span class="smaller-text">(PHP & JS)</span>
-            </h2>
-            <blockquote>I'm a life long learner, very passionate about technology.</blockquote>
-        </div>
-    </div>
 
-    <div class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <input type="email" id="from" placeholder="From: your@email.com">
-            <input type="text" id="subject" placeholder="Subject: keep it short">
-            <textarea name="" id="message" cols="30" rows="7" placeholder="Your message"></textarea>
-            <input type="text" id="name" placeholder="Best regards: Your name">
-            <br>
-            <button id="msgBtn">Message Me</button>
+<head>
+    <title>Oseni Adekunle</title>
+    <meta name="author" content="Oseni Adekunle">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="personal portfolio website for Oseni Adekunle">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <div class="content">
+            <h1>Adekunle Oseni.</h1>
+            <p>
+                I'm a Software Engineer based in Lagos, Nigeria. I love to create awesome web applications that solves
+                real
+                life problems. I am obsessed with Web Performance and also a UI enthusiast.
+            </p>
+            <ul class="social">
+                <li>
+                    <a href="mailto:adekunleoseni47@gmail.com?Subject=Hello">Email</a>
+                </li>
+                <li><a href="https://linkedin.com/in/adekunle-oseni/">LinkedIn</a></li>
+                <li><a href="https://github.com/adexot">Github</a></li>
+                <li><a href="https://twitter.com/oadex_09">Twitter</a></li>
+            </ul>
         </div>
     </div>
-<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script src="main.js"></script>
-</body> 
+</body>
+
 </html>
