--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 
 <head>
-    <title>Oseni Adekunle</title>
+    <title>Adekunle Oseni</title>
     <meta name="author" content="Oseni Adekunle">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="personal portfolio website for Oseni Adekunle">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -15,7 +22,7 @@
         <div class="content">
             <h1>Adekunle Oseni.</h1>
             <p>
-                I'm a Software Engineer based in Lagos, Nigeria. I love to create awesome web applications that solves
+                I'm a Software Engineer based in Lagos, Nigeria. I love to create awesome web applications that solve
                 real
                 life problems. I am obsessed with Web Performance and also a UI enthusiast.
             </p>
