--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         margin: 0;
         padding: 0;
       }
-      .content {
+      main {
         width: 80%;
         margin: 0 auto;
       }
-      .name {
+      h1 {
         position: fixed;
         bottom: 0;
         font-size: 18vw;
@@ -22,15 +22,27 @@
         margin: 0;
         line-height: 1;
         width: 100%;
+        -webkit-text-fill-color: white;
+        -webkit-text-stroke: 1px black;
+        margin-block-start: 0.67em;
+        margin-block-end: 0;
+        margin-inline-start: 0;
+      }
+      h3 {
+        font-size: 1.5em;
+      }
+      p {
+        font-size: 1.2em;
+        line-height: 1.5;
       }
     </style>
   </head>
   <body>
     <main class="content">
       <h3>Hey there 👋🏾,</h3>
-      <p>I'm a Software Engineer, specializing in Frontend Development.</p>
-      <p>This happens to be my little space on the internet 🌚</p>
-      <p>I hope to make good use of this space to document my progress ✍🏾</p>
+      <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
+      <p>This happens to be my little space on the internet 🌐</p>
+      <p>I hope to make good use of it to document ✍🏾 my learning.</p>
     </main>
     <h1 class="name">Adekunle</h1>
   </body>
