upgrade to parcel 2

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
   </head>
   <body>
     <main class="content">
+      <header>
+        <h1 class="name">Adekunle</h1>
+      </header>
       <h3>Hey there 👋🏾,</h3>
       <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
       <p>This happens to be my little space on the internet 🌐</p>
       <p>I hope to make good use of it to document ✍🏾 my learning.</p>
     </main>
-    <h1 class="name">Adekunle</h1>
   </body>
 </html>
