--- a/index.html
+++ b/index.html
@@ -3,45 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>oadex.dev</title>
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      main {
-        width: 80%;
-        margin: 0 auto;
-      }
-      h1 {
-        position: fixed;
-        bottom: 0;
-        font-size: 18vw;
-        text-align: center;
-        font-weight: 300;
-        margin: 0;
-        line-height: 1;
-        width: 100%;
-        -webkit-text-fill-color: white;
-        -webkit-text-stroke: 1px black;
-        margin-block-start: 0.67em;
-        margin-block-end: 0;
-        margin-inline-start: 0;
-      }
-      h3 {
-        font-size: 1.5em;
-      }
-      p {
-        font-size: 1.2em;
-        line-height: 1.5;
-      }
-    </style>
+    <title>Oadex.dev</title>
+    <link rel="stylesheet" href="./assets/style.scss">
   </head>
   <body>
+    <header>
+      <h1 class="name"><span class="text-stroke">Oseni</span>Adekunle</h1>
+    </header>
     <main class="content">
-      <header>
-        <h1 class="name">Adekunle</h1>
-      </header>
       <h3>Hey there 👋🏾,</h3>
       <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
       <p>This happens to be my little space on the internet 🌐</p>
