Integrate custom font

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="./assets/fonts/sofiapro-light.otf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oadex.dev</title>
-    <link rel="stylesheet" href="./assets/style.scss">
+    <link rel="stylesheet" href="./assets/css/style.scss" />
   </head>
   <body>
     <header>
-      <h1 class="name"><span class="text-stroke">Oseni</span>Adekunle</h1>
+      <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
+      <h1 class="name"><span class="text-stroke">Software</span> Engineer.</h1>
+      <h1 class="name"><span class="text-stroke">Lagos</span> Nigeria.</h1>
     </header>
     <main class="content">
       <h3>Hey there 👋🏾,</h3>
