--- a/index.html
+++ b/index.html
@@ -14,16 +14,41 @@
     <link rel="stylesheet" href="./assets/css/style.scss" />
   </head>
   <body>
-    <header>
-      <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
-      <h1 class="name"><span class="text-stroke">Software</span> Engineer.</h1>
-      <h1 class="name"><span class="text-stroke">Lagos</span> Nigeria.</h1>
-    </header>
-    <main class="content">
-      <h3>Hey there 👋🏾,</h3>
-      <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
-      <p>This happens to be my little space on the internet 🌐</p>
-      <p>I hope to make good use of it to document ✍🏾 my learning.</p>
+    <nav class="nav">
+      <span class="emoji-icon">👨🏾‍</span>
+      <ul class="social-icons">
+        <li>
+          <a href="#">
+            <icon src="github.svg" alt="github" height="20" width="20" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <icon src="twitter.svg" alt="twitter" height="20" width="20" />
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <main class="container">
+      <header class="intro">
+        <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
+        <h1 class="name">
+          <span class="text-stroke">Software</span> Engineer.
+        </h1>
+        <h1 class="name"><span class="text-stroke">Ibadan</span> Nigeria.</h1>
+      </header>
+      <section class="content">
+        <h3>Hey there 👋🏾,</h3>
+        <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
+        <p>This happens to be my little space on the internet 🌐</p>
+        <p>I hope to make good use of it to document ✍🏾 my learning.</p>
+      </section>
     </main>
+    <a href="mailto:adekunleoseni47@gmail.com" class='email'>adekunleoseni47@gmail.com</a>
   </body>
 </html>
