--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       <span class="emoji-icon">👨🏾‍</span>
       <ul class="social-icons">
         <li>
-          <a href="#">
+          <a href="https://github.com/adexot">
             <icon src="github.svg" alt="github" height="20" width="20" />
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://twitter.com/oadex_09">
             <icon src="twitter.svg" alt="twitter" height="20" width="20" />
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://www.linkedin.com/in/adekunle-oseni">
             <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
           </a>
         </li>
@@ -42,13 +42,14 @@
         </h1>
         <h1 class="name"><span class="text-stroke">Ibadan</span> Nigeria.</h1>
       </header>
-      <section class="content">
+      <!-- <section class="content">
         <h3>Hey there 👋🏾,</h3>
         <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
         <p>This happens to be my little space on the internet 🌐</p>
         <p>I hope to make good use of it to document ✍🏾 my learning.</p>
-      </section>
+      </section> -->
     </main>
     <a href="mailto:adekunleoseni47@gmail.com" class='email'>adekunleoseni47@gmail.com</a>
   </body>
 </html>
+`
