--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
       crossorigin
     />
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Software Engineer 👨🏾‍💻, specializing in Frontend Development."
+    />
+    <meta
+      name="keywords"
+      content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM"
+    />
+    <meta name="author" content="Adekunle Oseni" />
     <title>Oadex.dev</title>
     <link rel="stylesheet" href="./assets/css/style.scss" />
   </head>
@@ -18,17 +28,32 @@
       <span class="emoji-icon">👨🏾‍</span>
       <ul class="social-icons">
         <li>
-          <a href="https://github.com/adexot">
+          <a
+            href="https://github.com/adexot"
+            rel="noopener"
+            target="_blank"
+            aria-label="Github"
+          >
             <icon src="github.svg" alt="github" height="20" width="20" />
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/oadex_09">
+          <a
+            href="https://twitter.com/oadex_09"
+            rel="noopener"
+            target="_blank"
+            aria-label="Twitter"
+          >
             <icon src="twitter.svg" alt="twitter" height="20" width="20" />
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/adekunle-oseni">
+          <a
+            href="https://www.linkedin.com/in/adekunle-oseni"
+            rel="noopener"
+            target="_blank"
+            aria-label="LinkedIn"
+          >
             <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
           </a>
         </li>
@@ -49,7 +74,10 @@
         <p>I hope to make good use of it to document ✍🏾 my learning.</p>
       </section> -->
     </main>
-    <a href="mailto:adekunleoseni47@gmail.com" class='email'>adekunleoseni47@gmail.com</a>
+    <a
+      href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
+      class="email"
+      >adekunleoseni47@gmail.com</a
+    >
   </body>
 </html>
-`
