Update head with necessary go live tags

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM"
     />
     <meta name="author" content="Adekunle Oseni" />
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/public/favicon-16x16.png">
+    <link rel="manifest" href="./assets/public/site.webmanifest">
     <title>Oadex.dev</title>
     <link rel="stylesheet" href="./assets/css/style.scss" />
   </head>
