--- a/index.html
+++ b/index.html
@@ -85,5 +85,6 @@
       class="email"
       >adekunleoseni47@gmail.com</a
     >
+    <script src="./assets/js/main.js" async></script>
   </body>
 </html>
