--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1 class="name">
           <span class="text-stroke">Software</span> Engineer.
         </h1>
-        <h1 class="name"><span class="text-stroke">Ibadan</span> Nigeria.</h1>
+        <h1 class="name"><span class="text-stroke">Amsterdam,</span> Netherlands.</h1>
       </header>
       <!-- <section class="content">
         <h3>Hey there 👋🏾,</h3>
