--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1 class="name">
           <span class="text-stroke">Software</span> Engineer.
         </h1>
-        <h1 class="name"><span class="text-stroke">Amsterdam,</span> Netherlands.</h1>
+        <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The Netherlands.</h1>
       </header>
       <!-- <section class="content">
         <h3>Hey there 👋🏾,</h3>
@@ -85,6 +85,6 @@
       class="email"
       >adekunleoseni47@gmail.com</a
     >
-    <script src="./assets/js/main.js" async></script>
+    <script src="./assets/js/main.js" type="module" async></script>
   </body>
 </html>
