update workflow and remove heavy font

--- a/index.html
+++ b/index.html
@@ -1,90 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      rel="preload"
-      href="./assets/fonts/sofiapro-light.otf"
-      as="font"
-      type="font/ttf"
-      crossorigin
-    />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Software Engineer 👨🏾‍💻, specializing in Frontend Development."
-    />
-    <meta
-      name="keywords"
-      content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM"
-    />
-    <meta name="author" content="Adekunle Oseni" />
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/public/favicon-16x16.png">
-    <link rel="manifest" href="./assets/public/site.webmanifest">
-    <title>Oadex.dev</title>
-    <link rel="stylesheet" href="./assets/css/style.scss" />
-  </head>
-  <body>
-    <nav class="nav">
-      <span class="emoji-icon">👨🏾‍</span>
-      <ul class="social-icons">
-        <li>
-          <a
-            href="https://github.com/adexot"
-            rel="noopener"
-            target="_blank"
-            aria-label="Github"
-          >
-            <icon src="github.svg" alt="github" height="20" width="20" />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://twitter.com/oadex_09"
-            rel="noopener"
-            target="_blank"
-            aria-label="Twitter"
-          >
-            <icon src="twitter.svg" alt="twitter" height="20" width="20" />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://www.linkedin.com/in/adekunle-oseni"
-            rel="noopener"
-            target="_blank"
-            aria-label="LinkedIn"
-          >
-            <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
-          </a>
-        </li>
-      </ul>
-    </nav>
-    <main class="container">
-      <header class="intro">
-        <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
-        <h1 class="name">
-          <span class="text-stroke">Software</span> Engineer.
-        </h1>
-        <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The Netherlands.</h1>
-      </header>
-      <!-- <section class="content">
+
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Software Engineer 👨🏾‍💻, specializing in Frontend Development." />
+  <meta name="keywords"
+    content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM" />
+  <meta name="author" content="Adekunle Oseni" />
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/public/favicon-16x16.png">
+  <link rel="manifest" href="./assets/public/site.webmanifest">
+  <title>Oadex.dev</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.scss" />
+</head>
+
+<body>
+  <nav class="nav">
+    <a class="emoji-icon" href='/'>👨🏾‍</a>
+    <ul class="social-icons">
+      <li>
+        <a href="https://github.com/adexot" rel="noopener" target="_blank" aria-label="Github">
+          <icon src="github.svg" alt="github" height="20" width="20" />
+        </a>
+      </li>
+      <li>
+        <a href="https://twitter.com/oadex_09" rel="noopener" target="_blank" aria-label="Twitter">
+          <icon src="twitter.svg" alt="twitter" height="20" width="20" />
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/adekunle-oseni" rel="noopener" target="_blank" aria-label="LinkedIn">
+          <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <main class="container">
+    <header class="intro">
+      <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
+      <h1 class="name">
+        <span class="text-stroke">Software</span> Engineer.
+      </h1>
+      <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The Netherlands.</h1>
+    </header>
+    <!-- <section class="content">
         <h3>Hey there 👋🏾,</h3>
         <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
         <p>This happens to be my little space on the internet 🌐</p>
         <p>I hope to make good use of it to document ✍🏾 my learning.</p>
       </section> -->
-    </main>
-    <a
-      href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
-      class="email"
-      >adekunleoseni47@gmail.com</a
-    >
-    <script src="./assets/js/main.js" type="module" async></script>
-  </body>
+  </main>
+  <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle" class="email">adekunleoseni47@gmail.com</a>
+  <script src="./assets/js/main.js" type="module" async></script>
+</body>
+
 </html>
