add more sections to the page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/public/favicon-16x16.png">
   <link rel="manifest" href="./assets/public/site.webmanifest">
   <title>Oadex.dev</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.scss" />
 </head>
 
@@ -44,19 +44,54 @@
     </ul>
   </nav>
   <main class="container">
-    <header class="intro">
+    <header class="section">
       <h1 class="name"><span class="text-stroke">Oseni</span> Adekunle.</h1>
       <h1 class="name">
         <span class="text-stroke">Software</span> Engineer.
       </h1>
       <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The Netherlands.</h1>
     </header>
-    <!-- <section class="content">
-        <h3>Hey there 👋🏾,</h3>
-        <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
-        <p>This happens to be my little space on the internet 🌐</p>
-        <p>I hope to make good use of it to document ✍🏾 my learning.</p>
-      </section> -->
+    <section class="section">
+      <h3>Hey there 👋🏾,</h3>
+      <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
+      <p>This happens to be my little space on the internet 🌐</p>
+      <p>I hope to make good use of it to document ✍🏾 my learning.</p>
+      <p>
+        Software Engineer with a keen interest in developing high performance and scalable web applications.
+        A skilled Frontend Engineer, with a proven track record of building responsive, accessible and well-optimized
+        web solutions.
+        Some of the technologies I work with include: JavaScript, Typescript, NodeJs, React, GraphQL, Jest, Cypress,
+        GCP, K8s, Helm etc</p>
+    </section>
+    <section class="section">
+      <h3 class="underline">Work History</h3>
+      <div class="flex">
+        <div class="flex-item">
+          <h4>Momentive AI</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eum expedita ab blanditiis dicta
+            explicabo maiores ex, deleniti autem, praesentium corporis alias! Doloremque incidunt consectetur quasi iure
+            magnam tempore itaque!
+          </p>
+        </div>
+        <div class="flex-item">
+          <h4>Deimos Cloud</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eum expedita ab blanditiis dicta
+            explicabo maiores ex, deleniti autem, praesentium corporis alias! Doloremque incidunt consectetur quasi iure
+            magnam tempore itaque!
+          </p>
+        </div>
+        <div class="flex-item">
+          <h4>Konga Online Shopping Ltd.</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eum expedita ab blanditiis dicta
+            explicabo maiores ex, deleniti autem, praesentium corporis alias! Doloremque incidunt consectetur quasi iure
+            magnam tempore itaque!
+          </p>
+        </div>
+      </div>
+    </section>
   </main>
   <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle" class="email">adekunleoseni47@gmail.com</a>
   <script src="./assets/js/main.js" type="module" async></script>
