--- a/index.html
+++ b/index.html
@@ -7,18 +7,24 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Software Engineer 👨🏾‍💻, specializing in Frontend Development." />
+  <meta name="description"
+    content="Software Engineer 👨🏾‍💻, specializing in Frontend Development." />
   <meta name="keywords"
     content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM" />
   <meta name="author" content="Adekunle Oseni" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/public/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/public/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/public/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="./assets/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="./assets/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="./assets/public/favicon-16x16.png">
   <link rel="manifest" href="./assets/public/site.webmanifest">
   <title>Oadex.dev</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.scss" />
 </head>
 
@@ -27,17 +33,20 @@
     <a class="emoji-icon" href='/'>👨🏾‍</a>
     <ul class="social-icons">
       <li>
-        <a href="https://github.com/adexot" rel="noopener" target="_blank" aria-label="Github">
+        <a href="https://github.com/adexot" rel="noopener" target="_blank"
+          aria-label="Github">
           <icon src="github.svg" alt="github" height="20" width="20" />
         </a>
       </li>
       <li>
-        <a href="https://twitter.com/oadex_09" rel="noopener" target="_blank" aria-label="Twitter">
+        <a href="https://twitter.com/oadex_09" rel="noopener" target="_blank"
+          aria-label="Twitter">
           <icon src="twitter.svg" alt="twitter" height="20" width="20" />
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/adekunle-oseni" rel="noopener" target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/adekunle-oseni" rel="noopener"
+          target="_blank" aria-label="LinkedIn">
           <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
         </a>
       </li>
@@ -49,19 +58,19 @@
       <h1 class="name">
         <span class="text-stroke">Software</span> Engineer.
       </h1>
-      <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The Netherlands.</h1>
+      <h1 class="name"><span class="text-stroke">Amsterdam,</span> <br> The
+        Netherlands.</h1>
     </header>
-    <section class="section">
+    <section class="intro">
       <h3>Hey there 👋🏾,</h3>
-      <p>I'm a Software Engineer 👨🏾‍💻, specializing in Frontend Development.</p>
-      <p>This happens to be my little space on the internet 🌐</p>
-      <p>I hope to make good use of it to document ✍🏾 my learning.</p>
-      <p>
-        Software Engineer with a keen interest in developing high performance and scalable web applications.
-        A skilled Frontend Engineer, with a proven track record of building responsive, accessible and well-optimized
-        web solutions.
-        Some of the technologies I work with include: JavaScript, Typescript, NodeJs, React, GraphQL, Jest, Cypress,
-        GCP, K8s, Helm etc</p>
+      <p>I am Adekunle, mostly called Kunle (Koon-lay :speaker:) in short.</p>
+      <p> I
+        love the web with all my heart, being an ambivert who likes to spend a
+        good chunk of my time surfing the web.</p>
+      <p>I work as a Software Engineer, specializing in Frontend technologies. I
+        have an unwavering desire to build performant web
+        applications at scale.</p>
+      <p>Favourite catch phrase is: "Always betting on the Web"</p>
     </section>
     <section class="section">
       <h3 class="underline">Work History</h3>
@@ -69,31 +78,56 @@
         <div class="flex-item">
           <h4>Momentive AI</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eum expedita ab blanditiis dicta
-            explicabo maiores ex, deleniti autem, praesentium corporis alias! Doloremque incidunt consectetur quasi iure
-            magnam tempore itaque!
+            Currently work here on the Act team for the
+            <a href="https://www.getfeedback.com/" el="noopener" target="_blank"
+              aria-label="Getfeedback">GetFeedback</a> platform. My day-to-day
+            involves building out web experiences for the Automations Layer.
           </p>
         </div>
         <div class="flex-item">
           <h4>Deimos Cloud</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eum expedita ab blanditiis dicta
-            explicabo maiores ex, deleniti autem, praesentium corporis alias! Doloremque incidunt consectetur quasi iure
-            magnam tempore itaque!
+            Love at first hearing 😀
           </p>
+          <p>I worked at Deimos firstly as a Contractor, before transitioning
+            into full-time role; after a slightly disappointing experience at a
+            previous job where I had a short stint.</p>
+          <p>I had a great time here, working with A+ team to help businesses
+            build Cloud Native applications with best practices baked in.</p>
+            <p>🚀 Proudly a Deimos martian and Alumnus </p>
         </div>
         <div class="flex-item">
           <h4>Konga Online Shopping Ltd.</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eum expedita ab blanditiis dicta
-            explicabo maiores ex, deleniti autem, praesentium corporis alias! Doloremque incidunt consectetur quasi iure
-            magnam tempore itaque!
+            Joined Konga as an Engineering Cadet, straight out of university.
+            I was sold the mission to rebuild the customer facing web app
+            konga.com, with a focus on performance, responsiveness,
+            accessibility, reduced cost of operation, and of course a better
+            developer experience.
           </p>
+          <p>I got excited about the mission and rolled my sleeves to join the
+            team at work. We deployed the first release of the new application
+            about 7 months later, for yakata sales.</p>
+          <p>In this time, I got retained as a Software Engineer contributing to
+            the engineering goals.</p>
+        </div>
+        <div class="flex-item">
+          <h4>Hotels NG</h4>
+          <p>
+            Humble beginning as a candidate of the first HNG internship in 2016.
+            This was a great experience that introduced me to the world of
+            professional work setting.
+          </p>
+          <p>Fortunately, I finished as one of the few finalists with other
+            awesome folks who are still my guyz till date. :smile:</p>
+          <p>HNG was an eye opener and I'm a product of the internship who has
+            moved on to make a decent career, just like many others.</p>
         </div>
       </div>
     </section>
   </main>
-  <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle" class="email">adekunleoseni47@gmail.com</a>
+  <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
+    class="email">adekunleoseni47@gmail.com</a>
   <script src="./assets/js/main.js" type="module" async></script>
 </body>
 
