add anchor style

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <section class="intro">
       <h3>Hey there 👋🏾,</h3>
-      <p>I am Adekunle, mostly called Kunle (Koon-lay :speaker:) in short.</p>
+      <p>I am Adekunle, mostly called Kunle (Koon-lay) in short.</p>
       <p> I
         love the web with all my heart, being an ambivert who likes to spend a
         good chunk of my time surfing the web.</p>
@@ -73,13 +73,13 @@
       <p>Favourite catch phrase is: "Always betting on the Web"</p>
     </section>
     <section class="section">
-      <h3 class="underline">Work History</h3>
+      <h3 class="heading">Work History</h3>
       <div class="flex">
         <div class="flex-item">
           <h4>Momentive AI</h4>
           <p>
             Currently work here on the Act team for the
-            <a href="https://www.getfeedback.com/" el="noopener" target="_blank"
+            <a class="underline" href="https://www.getfeedback.com/" rel="noopener" target="_blank"
               aria-label="Getfeedback">GetFeedback</a> platform. My day-to-day
             involves building out web experiences for the Automations Layer.
           </p>
@@ -89,7 +89,8 @@
           <p>
             Love at first hearing 😀
           </p>
-          <p>I worked at Deimos firstly as a Contractor, before transitioning
+          <p>I worked at <a class="underline" href="https://deimos.io/" rel="noopener" target="_blank"
+            aria-label="Deimos">Deimos</a> firstly as a Contractor, before transitioning
             into full-time role; after a slightly disappointing experience at a
             previous job where I had a short stint.</p>
           <p>I had a great time here, working with A+ team to help businesses
@@ -101,7 +102,8 @@
           <p>
             Joined Konga as an Engineering Cadet, straight out of university.
             I was sold the mission to rebuild the customer facing web app
-            konga.com, with a focus on performance, responsiveness,
+            <a class="underline" href="https://www.konga.com/" rel="noopener" target="_blank"
+              aria-label="Konga">Konga</a>, with a focus on performance, responsiveness,
             accessibility, reduced cost of operation, and of course a better
             developer experience.
           </p>
