update font and ssubtle transition on anchor hover

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="manifest" href="./assets/public/site.webmanifest">
   <title>Oadex.dev</title>
   <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.scss" />
 </head>
