--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Software Engineer 👨🏾‍💻, specializing in Frontend Development." />
+  <meta name="description" content="Software Engineer 👨🏾‍💻, specializing in Frontend Development." />
   <meta name="keywords"
     content="HTML,CSS,JavaScript, React, Node, SASS, Redux, PHP, Laravel, GraphQL, Express, GCP, Firebase, GTM" />
   <meta name="author" content="Adekunle Oseni" />
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-  <link rel="apple-touch-icon" sizes="180x180"
-    href="./assets/public/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32"
-    href="./assets/public/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16"
-    href="./assets/public/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/public/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/public/favicon-16x16.png">
   <link rel="manifest" href="./assets/public/site.webmanifest">
   <title>Oadex.dev</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.scss" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ECS101WP4Z"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-ECS101WP4Z');
+  </script>
 </head>
 
 <body>
@@ -33,20 +36,17 @@
     <a class="emoji-icon" href='/'>👨🏾‍</a>
     <ul class="social-icons">
       <li>
-        <a href="https://github.com/adexot" rel="noopener" target="_blank"
-          aria-label="Github">
+        <a href="https://github.com/adexot" rel="noopener" target="_blank" aria-label="Github">
           <icon src="github.svg" alt="github" height="20" width="20" />
         </a>
       </li>
       <li>
-        <a href="https://twitter.com/oadex_09" rel="noopener" target="_blank"
-          aria-label="Twitter">
+        <a href="https://twitter.com/oadex_09" rel="noopener" target="_blank" aria-label="Twitter">
           <icon src="twitter.svg" alt="twitter" height="20" width="20" />
         </a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/adekunle-oseni" rel="noopener"
-          target="_blank" aria-label="LinkedIn">
+        <a href="https://www.linkedin.com/in/adekunle-oseni" rel="noopener" target="_blank" aria-label="LinkedIn">
           <icon src="linkedin.svg" alt="linkedin" height="20" width="20" />
         </a>
       </li>
@@ -90,12 +90,12 @@
             Love at first hearing 😀
           </p>
           <p>I worked at <a class="underline" href="https://deimos.io/" rel="noopener" target="_blank"
-            aria-label="Deimos">Deimos</a> firstly as a Contractor, before transitioning
+              aria-label="Deimos">Deimos</a> firstly as a Contractor, before transitioning
             into full-time role; after a slightly disappointing experience at a
             previous job where I had a short stint.</p>
           <p>I had a great time here, working with A+ team to help businesses
             build Cloud Native applications with best practices baked in.</p>
-            <p>🚀 Proudly a Deimos martian and Alumnus </p>
+          <p>🚀 Proudly a Deimos martian and Alumnus </p>
         </div>
         <div class="flex-item">
           <h4>Konga Online Shopping Ltd.</h4>
@@ -128,8 +128,7 @@
       </div>
     </section>
   </main>
-  <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle"
-    class="email">adekunleoseni47@gmail.com</a>
+  <a href="mailto:adekunleoseni47@gmail.com&subject=Hey%20Adekunle" class="email">adekunleoseni47@gmail.com</a>
   <script src="./assets/js/main.js" type="module" async></script>
 </body>
 
