update website content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h3>Hey there 👋🏾,</h3>
       <p>I am Adekunle, mostly called Kunle (Koon-lay) in short.</p>
       <p> I
-        love the web with all my heart, being an ambivert who likes to spend a
+        love the web with all my heart, being an introvert who likes to spend a
         good chunk of my time surfing the web.</p>
       <p>I work as a Software Engineer, specializing in Frontend technologies. I
         have an unwavering desire to build performant web
